--- a/src/index.css
+++ b/src/index.css
@@ -96,12 +96,19 @@ body {
   text-decoration: none;
   padding: 10px;
 }
+a:link {
+  color: rgb(0, 0, 0); 
+}
+a:visited {
+  color:inherit;
+}
 .navbar .dropdown-content {
   background-color: var(--color-secondary);
   visibility: hidden;
   opacity: 0;
   position: absolute;
   transition: all 0.5s ease;
+  border-radius: 5px;
   margin-top: 1rem;
   top: 40px;
   left: auto;
