--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@
   --color-secondary: #c5d5ff;
   --color-confirm: var(--color-primary);
   --color-confirm-hover: var(--color-primary-hover);
+  --color-navbar: #3A3E44;
+  --color-navbar-hover: #1b1d20;
   --color-danger: #f78154;
 
   --code-background: #161320;
@@ -101,6 +103,7 @@ code {
 }
 
 .title-container {
+  margin-top: 4rem;
   display: flex;
   align-items: baseline;
   flex-flow: column;
@@ -111,6 +114,7 @@ code {
   font-weight: var(--title-weight);
   font-size: var(--title-size);
 }
+
 .title-small {
   font-size: var(--subtitle-size);
 }
@@ -153,66 +157,104 @@ code {
 .post-container p {
   margin-left: 5px;
 }
-.navbar-container {
+
+.navbar {
+  z-index: 1;
+  position: -webkit-sticky; /* Safari */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   font-family: var(--body-font);
   overflow: hidden;
-  background-color: var(--color-secondary);
-  border-radius: 5px;
-}
-.navbar-container * {
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-.navbar {
+  background-color: var(--color-navbar);
+  color: #fff;
+  border-radius: 0px;
   padding: 0;
   margin: 0;
   list-style-type: none;
   padding: 10px;
+  height: auto;
 }
-.navbar li a {
+
+.navbar a {
+  display: block;
+  float: left;
   text-decoration: none;
+  text-align: center;
   padding: 10px;
 }
+
+.navbar a:hover {
+  background-color: var(--color-navbar-hover);
+}
+
 a:link {
   color: rgb(0, 0, 0);
 }
+
 a:visited {
   color: inherit;
 }
-.navbar .dropdown-content {
-  background-color: var(--color-secondary);
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  transition: all 0.5s ease;
+
+.dropdown-content {
+  background-color: var(--color-navbar);
   border-radius: 5px;
-  margin-top: 1rem;
-  top: 40px;
-  left: auto;
   display: none;
-  z-index: 1;
-  padding: 10px;
+  padding: 5px;
 }
 
-.navbar img {
+.align_right {
+  float: right;
+  margin-right: 25px;
+}
+
+.proto_speen {
   position: relative;
-  left: 78rem;
-  top: 7px;
-}
-
-.navbar img:hover {
-  cursor: default;
-  transform: rotate(360deg);
-  transition: all 0.3s ease-in-out 0s;
-}
-
-.navbar .dropdown:hover .dropdown-content {
-  visibility: visible;
-  flex-flow: column;
-  align-items: center;
-  opacity: 1;
+  top: 5px;
   display: block;
+}
+
+@-webkit-keyframes speen /* Safari and Chrome */ {
+  from {
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes speen {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+.speen {
+  -webkit-animation: speen 2s linear infinite;
+  -moz-animation: speen 2s linear infinite;
+  -ms-animation: speen 2s linear infinite;
+  -o-animation: speen 2s linear infinite;
+  animation: speen 2s linear infinite;
+}
+.dropdown:hover .dropdown-content {
+  position: absolute;
+  display: block;
+  top: 5px;
+  left: 12.5rem;
 }
 .post-container {
   display: flex;
