--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-
+@import url("/node_modules/react-image-gallery/styles/css/image-gallery.css");
 :root {
   margin: 0 0;
   padding: 0 0;
